crates/lib/tests/deserializers/text/snapshots/r#mod__deserializers__text__parse_records@record-2.json.snap
---
source: crates/lib/tests/deserializers/text/mod.rs
expression: "KafkaRecord::parse(owned_message)"
input_file: crates/lib/tests/deserializers/text/inputs/record-2.json
---
KafkaRecord {
    topic: "my-topic",
    timestamp: Some(
        0,
    ),
    partition: 0,
    offset: 0,
    headers: {},
    key_schema: None,
    value_schema: None,
    size: 10,
    key: String(
        "\0\0\0\0\u{1}",
    ),
    key_as_string: "\0\0\0\0\u{1}",
    value: String(
        "\0\0\0\0\u{2}",
    ),
    value_as_string: "\0\0\0\0\u{2}",
}
